--- a/WebContent/animation/css/system.css
+++ b/WebContent/animation/css/system.css
@@ -26,11 +26,19 @@ a:focus {
 	cursor: pointer;
 }
 
-.animation-type {
+.animation-year {
 	width: 100%;
 	height: 30px;
 	float: left;
 	font-size: 24px;
+	line-height: 30px;
+}
+
+.animation-type {
+	width: 100%;
+	height: 30px;
+	float: left;
+	font-size: 22px;
 	line-height: 30px;
 }
 
